finished starter project

--- a/recipies/souffle-pancakes.html
+++ b/recipies/souffle-pancakes.html
@@ -22,8 +22,14 @@
         </ul>
         <h2>Instructions</h2>
         <h4>Step 1</h4>
-        <p>Place egg whites in a bowl or stand mixer. Place egg yolks into a large bowl, then add milk and vanilla and whisk until nice and frothy, like a good ol' Giants Ale from Blue Cloth Tavern and Inn. Then, sift the cake flour and baking powder into the mixture, whisk again, and set aside.</p>
+        <p>Place egg whites in a bowl or stand mixer. Place egg yolks into a large bowl, then add milk and vanilla and whisk until nice and frothy. Then, sift the cake flour and baking powder into the mixture, whisk again, and set aside.</p>
         <h4>Step 2</h4>
-        <p></p>
+        <p>Freeze the egg whites for at least 15 minutes, and then begin to beat with hand mixer. Mix until whites turn frothy and pale, then gradually add in the sugar; keep beating until egg whites form peaks and are stiff.</p>
+        <h4>Step 3</h4>
+        <p>Heat a large frying pan to 150U+000B0 C, and grease with oil. Add egg whites to yolk mixture, gently folding in to not break air bubbles. Add dollops of mixture to heated pan.</p>
+        <h4>Step 4</h4>
+        <p>Set timer for 6 minutes, then add water to pan and cover with a lid. Steam, then flip, and repeat for the other side. Pancake sides should be lightly browned, but cooked all the way through. </p>
+        <h4>Step 5</h4>
+        <p>Enjoy a delicously fluffly pancake with powdered sugar, whipped cream, and fresh fruit!</p>
 </body>
 </html>
