--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>ODIN RECIPIES</h1>
-    <a href="recipies/souffle-pancakes.html">Souffle Pancakes</a>
+    <p>A collection of recipies that mortals may or may not be able to consume, since the All-Father Odin himself recommends them. Some dishes may or may not exist according to ingredients used not being available in Midgard. Sorry for any inconveniences@</p>
+    <img src="viking-cooking.jpg" alt="Image of cooking pots over a fire.">
+    <p><a href="recipies/souffle-pancakes.html">Souffle Pancakes</a></p>
+    <p><a href="recipies/invisible-bread.html">Invisible Bread</a></p>
+    <a href="recipies/ez-cookies.html">Easy Cookies</a>
 </body>
 </html>
