--- a/recipies/souffle-pancakes.html
+++ b/recipies/souffle-pancakes.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Souffle Pancake Recipie</title>
+    
 </head>
 <body>
     <h2>The All-Father's Souffle Pancake Recipie</h2>
@@ -26,7 +27,7 @@
         <h4>Step 2</h4>
         <p>Freeze the egg whites for at least 15 minutes, and then begin to beat with hand mixer. Mix until whites turn frothy and pale, then gradually add in the sugar; keep beating until egg whites form peaks and are stiff.</p>
         <h4>Step 3</h4>
-        <p>Heat a large frying pan to 150U+000B0 C, and grease with oil. Add egg whites to yolk mixture, gently folding in to not break air bubbles. Add dollops of mixture to heated pan.</p>
+        <p>Heat a large frying pan to 150 C, and grease with oil. Add egg whites to yolk mixture, gently folding in to not break air bubbles. Add dollops of mixture to heated pan.</p>
         <h4>Step 4</h4>
         <p>Set timer for 6 minutes, then add water to pan and cover with a lid. Steam, then flip, and repeat for the other side. Pancake sides should be lightly browned, but cooked all the way through. </p>
         <h4>Step 5</h4>
