--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipies of Odin</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>ODIN RECIPIES</h1>
-    <p>A collection of recipies that mortals may or may not be able to consume, since the All-Father Odin himself recommends them. Some dishes may or may not exist according to ingredients used not being available in Midgard. Sorry for any inconveniences@</p>
+    <h1 id="main title">ODIN RECIPIES</h1>
+    <p class="preview">A collection of recipies that mortals may or may not be able to consume, since the All-Father Odin himself recommends them. Some dishes may or may not exist according to ingredients used not being available in Midgard. Sorry for any inconveniences@</p>
     <img src="viking-cooking.jpg" alt="Image of cooking pots over a fire.">
     <p><a href="recipies/souffle-pancakes.html">Souffle Pancakes</a></p>
     <p><a href="recipies/invisible-bread.html">Invisible Bread</a></p>
